# birgitte_rust_tasks

./: .gitmodules  Cargo.toml  README.MD
.cargo/: config.toml
memoization/: Cargo.toml
memoization/src/: lib.rs
src/: main.rs  main_new.rs  main_old.rs  test.rs
src/lib/: lib-fibonacci.rs
