[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rand_core = "0.6.0"
rand = "0.8.5"
plotpy = "0.3.5"
plotly = "0.8.3"
memoize = "0.3.3"
memoization = { path = "memoization" }
lazy_static = "1.4.0"
birgitte_fibonacci = "0.2.0"